<resources>
    <string name="app_name">Minecreft_Login</string>

    <!--    Principal View-->
    <string name="btn_title">Sign In</string>
    <string name="createAccount">Create an Account</string>

    <!--    Login View-->
    <string name="welcomeBack">Welcome Back</string>
    <string name="loginToAccount">Login to Your Account</string>
    <string name="plc_email">Email</string>
    <string name="plc_password">Password</string>
    <string name="email_icon_description">Please Enter your Email</string>
    <string name="password_icon_description">Please Enter your Password</string>

    <!--    3rd Views-->
    <string name="title_register">Register</string>
    <string name="description_register">Create your new Account</string>
    <string name="full_name">Full Name</string>
    <string name="gmail">user@mail.com</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>

    <!--    codomain-->
    <string name="login">Login</string>
    <string name="todo">TODO</string>
</resources>