<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:src="@drawable/login_img_up" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/containerTitleAndDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/welcomeBack"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5sp"
            android:fontFamily="@font/regular_minecraft"
            android:text="@string/loginToAccount"
            android:textColor="@color/description"
            android:textSize="17.5sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--    Inputs Container-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/containerInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerTitleAndDescription">

        <!--        Users Information's-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:hint="@string/plc_email"
            app:startIconContentDescription="@string/email_icon_description"
            app:startIconDrawable="@drawable/baseline_person_outline_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/regular_minecraft"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/description"
                android:textColorHint="@color/description"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/plc_password"
            app:startIconContentDescription="@string/password_icon_description"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/regular_minecraft"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingStart="23dp"
                android:textColor="@color/description"
                android:textColorHint="@color/description"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/regular_minecraft"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/description"
            android:textSize="16sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--    Final Images-->
    <!--    <ImageView-->
    <!--        android:layout_width="250dp"-->
    <!--        android:layout_height="250dp"-->
    <!--        android:layout_marginStart="-60dp"-->
    <!--        android:layout_marginTop="68dp"-->
    <!--        android:src="@drawable/cat"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/containerInputs" />-->

    <!--    <ImageView-->
    <!--        android:layout_width="250dp"-->
    <!--        android:layout_height="145dp"-->
    <!--        android:src="@drawable/ender_dragon"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/containerInputs" />-->
</androidx.constraintlayout.widget.ConstraintLayout>