<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_3view"
    tools:context=".CreateAccountActivity">

    <!--    Container - Button-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/containerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <!--        Button && Icon-->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/arrow_left"
            tools:ignore="MissingConstraints" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--    Container -  New Users-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/containerRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerBtn"
        tools:ignore="MissingConstraints">

        <!--        Principal Title-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/title_register"
            android:textColor="@color/black"
            android:textSize="42sp"
            android:textStyle="bold" />

        <!--        Description-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:fontFamily="@font/regular_minecraft"
            android:text="@string/description_register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--    Container - Image-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/containerRegister"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="-250dp"
            android:src="@drawable/bee" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--    Inputs-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/containerInputs3views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerRegister">

        <!--        Users Information's-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            app:startIconContentDescription="@string/email_icon_description"
            app:startIconDrawable="@drawable/baseline_person_outline_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtFullNameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/regular_minecraft"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/description"
                android:textColorHint="@color/description"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/gmail"
            app:startIconDrawable="@drawable/baseline_mail_outline_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/regular_minecraft"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/description"
                android:textColorHint="@color/description"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/regular_minecraft"
                android:inputType="textWebPassword"
                android:padding="10dp"
                android:textColor="@color/description"
                android:textColorHint="@color/description"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Button-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLoginRegister"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/regular_minecraft"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/description"
            android:textSize="16sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--    Remember me-->
    <TextView
        android:id="@+id/RememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/regular_minecraft"
        android:text="@string/remember_me"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/baseline_check_circle_outline_24"
        app:layout_constraintEnd_toStartOf="@+id/forgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerInputs3views" />

    <!--    Forgot Password-->
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/regular_minecraft"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/RememberMe"
        app:layout_constraintTop_toBottomOf="@id/containerInputs3views" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerImagesRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RememberMe"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/cat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/containerImagesRegister" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/torch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/containerImagesRegister" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>